@@ -3,6 +3,8 @@
 	* src/gui/browserbox.cpp: Fix a basic_string::at sometimes being out
 	of range in BrowserBox::draw when checking for line separators and
 	color codes.
+	* src/localplayer.cpp: Cancel walking to a clicked monster if the
+	target is lost while getting to it (killed or otherwise removed).
 
 2008-04-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
